force-app/main/default/objects/Stop__c/Stop__c.object-meta.xml
<CustomObject>
    <description>Load stops (pickup and delivery points) on a freight route</description>
    <externalDataSource></externalDataSource>
    <externalRepository>false</externalRepository>
    <isTranslatable>false</isTranslatable>
    <label>Stop</label>
    <nameField>
        <label>Stop Number</label>
        <type>AutoNumber</type>
        <displayFormat>STOP-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Stops</pluralLabel>
    <quickActionList>
        <quickAction>FeedItem.ContentPost</quickAction>
        <quickAction>FeedItem.ContentNote</quickAction>
        <quickAction>FeedItem.LinkPost</quickAction>
    </quickActionList>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>