force-app/main/default/objects/Stop__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Facility Account at this stop (shipper, receiver, or terminal)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stops</relationshipLabel>
    <relationshipName>Stops</relationshipName>
    <type>Lookup</type>
</CustomField>