force-app/main/default/objects/Stop__c/fields/Actual_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Actual_Arrival__c</fullName>
    <description>Actual arrival time at stop (from POD or manual entry)</description>
    <label>Actual Arrival</label>
    <type>DateTime</type>
</CustomField>