force-app/main/default/objects/Stop__c/fields/Actual_Departure__c.field-meta.xml
<CustomField>
    <fullName>Actual_Departure__c</fullName>
    <description>Actual departure time from stop (from POD or manual entry)</description>
    <label>Actual Departure</label>
    <type>DateTime</type>
</CustomField>