force-app/main/default/objects/Stop__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <description>Confirmed appointment date at this stop</description>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>