force-app/main/default/objects/Stop__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <description>How scheduling is handled at this stop</description>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>APPT</fullName><default>false</default><label>Appointment Required</label></value>
            <value><fullName>FCFS</fullName><default>false</default><label>First Come First Served</label></value>
            <value><fullName>Schedule_Pending</fullName><default>true</default><label>Schedule Pending</label></value>
            <value><fullName>Drop_Trailer</fullName><default>false</default><label>Drop Trailer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>