force-app/main/default/objects/Stop__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company name at stop location</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>