force-app/main/default/objects/Stop__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <description>Appointment or delivery confirmation number provided by the facility</description>
    <label>Confirmation Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>