force-app/main/default/objects/Stop__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Scheduling contact at this stop</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stops</relationshipLabel>
    <relationshipName>Stops_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>