force-app/main/default/objects/Stop__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Phone number for contact at stop</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>