force-app/main/default/objects/Stop__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <label>ETA</label>
    <type>DateTime</type>
</CustomField>