force-app/main/default/objects/Stop__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description>Special instructions for this stop (loading/unloading, contact info, etc.)</description>
    <label>Instructions</label>
    <type>LongTextArea</type>
</CustomField>