force-app/main/default/objects/Stop__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <description>Load that this stop belongs to</description>
    <label>Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Stops</relationshipLabel>
    <relationshipName>Stops</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>