force-app/main/default/objects/Stop__c/fields/POD_Reference__c.field-meta.xml
<CustomField>
    <fullName>POD_Reference__c</fullName>
    <description>Link to Proof of Delivery record for this stop</description>
    <label>POD Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>