force-app/main/default/objects/Stop__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State/Province</description>
    <label>State</label>
    <length>100</length>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AL</fullName>
                <label>AL - Alabama</label>
            </value>
            <value>
                <fullName>AK</fullName>
                <label>AK - Alaska</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>AZ - Arizona</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>AR - Arkansas</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>CA - California</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>CO - Colorado</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>CT - Connecticut</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>DE - Delaware</label>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>FL - Florida</label>
            </value>
            <value>
                <fullName>GA</fullName>
                <label>GA - Georgia</label>
            </value>
            <value>
                <fullName>HI</fullName>
                <label>HI - Hawaii</label>
            </value>
            <value>
                <fullName>ID</fullName>
                <label>ID - Idaho</label>
            </value>
            <value>
                <fullName>IL</fullName>
                <label>IL - Illinois</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>IN - Indiana</label>
            </value>
            <value>
                <fullName>IA</fullName>
                <label>IA - Iowa</label>
            </value>
            <value>
                <fullName>KS</fullName>
                <label>KS - Kansas</label>
            </value>
            <value>
                <fullName>KY</fullName>
                <label>KY - Kentucky</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <label>LA - Louisiana</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <label>ME - Maine</label>
            </value>
            <value>
                <fullName>MD</fullName>
                <label>MD - Maryland</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <label>MA - Massachusetts</label>
            </value>
            <value>
                <fullName>MI</fullName>
                <label>MI - Michigan</label>
            </value>
            <value>
                <fullName>MN</fullName>
                <label>MN - Minnesota</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <label>MS - Mississippi</label>
            </value>
            <value>
                <fullName>MO</fullName>
                <label>MO - Missouri</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <label>MT - Montana</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>NE - Nebraska</label>
            </value>
            <value>
                <fullName>NV</fullName>
                <label>NV - Nevada</label>
            </value>
            <value>
                <fullName>NH</fullName>
                <label>NH - New Hampshire</label>
            </value>
            <value>
                <fullName>NJ</fullName>
                <label>NJ - New Jersey</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>