force-app/main/default/objects/Stop__c/fields/Stop_Type__c.field-meta.xml
<CustomField>
    <fullName>Stop_Type__c</fullName>
    <description>Type of stop (Pickup or Delivery)</description>
    <label>Stop Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Drop_and_Hook</fullName>
                <label>Drop and Hook</label>
            </value>
            <value>
                <fullName>Transload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>