force-app/main/default/objects/Stop__c/fields/Window_Begin__c.field-meta.xml
<CustomField>
    <fullName>Window_Begin__c</fullName>
    <description>Scheduled start time for this stop</description>
    <label>Window Begin</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>