force-app/main/default/objects/Stop__c/fields/Window_End__c.field-meta.xml
<CustomField>
    <fullName>Window_End__c</fullName>
    <description>Scheduled end time for this stop</description>
    <label>Window End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>