force-app/main/default/objects/Stop__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>ZIP/Postal code</description>
    <label>ZIP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>